--- a/style/cellBR.css
+++ b/style/cellBR.css
@@ -80,9 +80,10 @@ todo Mustard
 
         #menuburguer {
             display: inline;
-            float: right;
-            padding-top: 13px;
-            padding-right: 11px;
+            position: relative;
+            right: 28px;
+            top: 11px;
+            transition: 0.3s ease;
         }
 
 /*==================================*/
@@ -556,3 +557,144 @@ todo Mustard
             top: 776px;
         }
 /*======================================================*/
+
+    #itens  {
+
+        display: none;
+
+        position: absolute;
+        width: 170px;
+        height: 6140px;
+        background-color: #343635b7;
+        right: 1px;
+        top: 1px;
+        font-size: 24px;
+        color: white;
+    }
+
+        #ulitens {
+            position: relative;
+            top: 66px;
+            right: 25px;
+            list-style: none;
+        }
+
+        #li1 {
+            padding-bottom: 25px;
+        }
+
+        #li2 {
+            padding-bottom: 25px;
+        }
+
+
+    .open {
+        display: block;
+    }
+
+/*================================*/
+
+#menuburguer {
+    position: absolute;
+    z-index: 2;
+}
+
+#menu-bar {
+  width: 45px;
+  height: 40px;
+  margin: 30px 0 20px 20px;
+  cursor: pointer;
+}
+
+.bar {
+  height: 5px;
+  width: 100%;
+  background-color: #ffffff;
+  display: block;
+  border-radius: 5px;
+  transition: 0.3s ease;
+  z-index: 2;
+}
+
+#bar1 {
+  transform: translateY(-4px);
+}
+
+#bar3 {
+  transform: translateY(4px);
+}
+
+.navburguer {
+  transition: 0.3s ease;
+  display: none;
+  z-index: 2;
+}
+
+.navburguer ul {
+  padding: 0 22px;
+}
+
+.navburguer li {
+  list-style: none;
+  padding: 12px 0;
+}
+
+.navburguer li a {
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.navburguer li a:hover {
+  font-weight: bold;
+}
+
+.menu-bg, #menu {
+  top: 0;
+  right: -121px;
+  position: absolute;
+}
+
+.menu-bg {
+  z-index: 1;
+  width: 0;
+  height: 0;
+  margin: 30px 0 20px 20px;
+  background: #292727be;
+  transition: 0.3s ease;
+}
+
+.change {
+  display: block;
+}
+
+.change .bar {
+  background-color: white;
+}
+
+.change #bar1 {
+  transform: translateY(4px) rotateZ(-45deg);
+}
+
+.change #bar2 {
+  opacity: 0;
+}
+
+.change #bar3 {
+  transform: translateY(-6px) rotateZ(45deg);
+}
+
+.change-bg {
+  width: 200px;
+  height: 8870px;
+  transform: translate(-60%,-30%);
+}
+
+/*================================================*/
+
+    #EUAAAAA {
+        position: relative;
+        top: -226px; right: -113px;
+    }
+
+}
